test/sparse/domains/parentNotDomainError.good
parentNotDomainError.chpl:3: error: building a sparse subdomain of a non-domain value of type [domain(1,int(64),one)] range(int(64),both,one)
